# unicode-casefold

./: Cargo.toml  README.md
scripts/: generate.py
src/: lib.rs  tables.rs
